Fix IE image stretching bug.

--- a/src/scss/Sections/About/About.scss
+++ b/src/scss/Sections/About/About.scss
@@ -6,9 +6,14 @@ section#about {
     box-shadow: 0 -40px 30px 0px shadow(0.5);
     img.me {
         width: 100%;
+        height: auto;
         border-radius: 50%;
         -webkit-user-drag: none;
         user-select: none;
+
+        @include for-ie {
+            min-height: 1px;
+        }
     }
 
     .flavor {
